deploy/apps/central-tx-dfw-f01/default/dev/factory/inference.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inferencemodule
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inferencemodule
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: inferencemodule
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: inferencemodule
        image: intelligentedge/inferencemodule:0.27.0-amd64
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: inferencemodule
spec:
  ports:
  - port: 5000
  selector:
    app: inferencemodule
