deploy/apps/central-tx-dfw-f01/default/dev/factory/rtspsim.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rtspsim
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rtspsim
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: rtspsim
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: rtspsim
        image: intelligentedge/rtspsimmodule:0.27.0-amd64
        imagePullPolicy: Always
        ports:
        - containerPort: 554
        volumeMounts:
        - name: upload
          mountPath: /app/upload
      volumes:
      - name: upload
        persistentVolumeClaim:
          claimName: pvc-upload

---
apiVersion: v1
kind: Service
metadata:
  name: rtspsim
  namespace: default
spec:
  ports:
  - port: 554
  selector:
    app: rtspsim
