deploy/apps/central-tx-dfw-f01/default/dev/factory/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web-vs
  namespace: default
spec:
  hosts:
    - "central-tx-dfw-f01.cseretail.com"
  gateways:
    - istio-system/istio-gateway
  http:
    - match:
      route:
        - destination:
            host: webmodule
            port:
              number: 8000
